<resources>
    <string name="app_name">Lab4</string>
    <string name="Enter_name">Name:</string>
    <string name="enter_name">Enter Name</string>
    <string name="Enter_location">"Enter Location: "</string>
    <string name="enter_location">Enter Loaction</string>
    <string name="location">Location</string>
    <string name="Elocation">"Location: "</string>
    <string name="map">Map</string>
    <string name="Openingooglemaps">Open in google maps</string>
    <string name="SoccerTeamManager">Soccer Team Manager</string>
    <string name="select_image_icon">Select Image Icon:</string>
    <string name="loadFromPhone">Load From Phone</string>
</resources>